# bserpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_basic_user.py  02_ranking.py  03_match_detail.py  04_l10n_and_meta.py  05_weapon_routes.py  06_error_handling.py  07_async_usage.py  08_utils.py
src/bserpy/: __init__.py  _async_client.py  _client.py  _errors.py  _http.py
src/bserpy/models/: __init__.py  _enums.py  _l10n.py  _match.py  _ranking.py  _route.py  _union.py  _user.py
src/bserpy/resources/: _async_matches.py  _async_meta.py  _async_ranking.py  _async_users.py  _matches.py  _meta.py  _ranking.py  _users.py
src/bserpy/utils/: __init__.py  _character.py  _item.py  _season.py  _simulator.py
tests/: conftest.py
tests/fixtures/: match.json  top_ranks.json  user_nickname.json  user_rank.json  user_stats.json
tests/resources/: test_matches.py  test_meta.py  test_ranking.py  test_users.py
tests/utils/: test_character.py  test_item.py  test_simulator.py
