[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bserpy"
version = "0.2.0"
description = "Python wrapper for the Eternal Return (BSER) Open API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "d3vksy", email = "d3vksy@gmail.com" }]
keywords = ["eternal-return", "bser", "api", "game", "wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://github.com/d3vksy/bserpy"
Repository = "https://github.com/d3vksy/bserpy"
"Bug Tracker" = "https://github.com/d3vksy/bserpy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "build",
    "twine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bserpy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
